--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ chrono = "0.4.39"
 log = "0.4.25"
 termion = "4.0.3"
 users = "0.11.0"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.138"
