--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ termion = "4.0.3"
 users = "0.11.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
+rand = "0.9.0"
