--- a/website/package.json
+++ b/website/package.json
@@ -3,12 +3,21 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.3.0"
+    "@fontsource/inter": "^5.1.1",
+    "@fontsource/jersey-15": "^5.1.1",
+    "@fontsource/twinkle-star": "^5.1.1",
+    "@fontsource/vt323": "^5.1.1",
+    "@tailwindcss/vite": "^4.0.7",
+    "astro": "^5.3.0",
+    "tailwindcss": "^4.0.7"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
