--- a/website/package.json
+++ b/website/package.json
@@ -15,10 +15,13 @@
     "@fontsource/twinkle-star": "^5.1.1",
     "@fontsource/vt323": "^5.1.1",
     "@tailwindcss/vite": "^4.0.7",
+    "asciinema-player": "^3.9.0",
     "astro": "^5.3.0",
+    "astro-terminal-player": "^0.1.5",
     "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
+    "@tailwindcss/typography": "^0.5.16",
+    "sass-embedded": "^1.86.3"
   }
 }
